Restructure for Swift 3

--- a/M55-Flocking-Patterns/module.yaml
+++ b/M55-Flocking-Patterns/module.yaml
@@ -1,2 +1,2 @@
 tutorial_url: 'https://github.com/MakeSchool-Tutorials/Intro-Flocking-Swift/tree/master'
-title: 'Flocking Patterns & Artificial Intelligence'
+title: 'Flocking Patterns & Artificial Intelligence (Xcode 7 Archive)'
