--- a/M75-API-JSON/module.yaml
+++ b/M75-API-JSON/module.yaml
@@ -1,2 +1,2 @@
 tutorial_url: 'https://github.com/MakeSchool-Tutorials/JSON-API-Swift/tree/master'
-title: 'Parsing JSON and using APIs'
+title: 'Parsing JSON and using APIs (Xcode 7 Archive)'
