--- a/M78-MakeSchoolNotes/module.yaml
+++ b/M78-MakeSchoolNotes/module.yaml
@@ -1,2 +1,2 @@
 tutorial_url: 'https://github.com/MakeSchool-Tutorials/MakeSchoolNotes-Swift-V2/tree/master'
-title: 'Learn How to Build Make School Notes'
+title: 'Learn How to Build Make School Notes (Xcode 7 Archive)'
