--- a/M51-Functions-No-Playground/module.yaml
+++ b/M51-Functions-No-Playground/module.yaml
@@ -1,2 +1,2 @@
 tutorial_url: 'https://github.com/MakeSchool-Tutorials/Intro-Functions-No-Playground-Swift/tree/master'
-title: 'Functions and Generative Art (no playground)'
+title: 'Functions and Generative Art (no playground, Xcode 7 Archive)'
