--- a/M52-Clock-App/module.yaml
+++ b/M52-Clock-App/module.yaml
@@ -1,2 +1,2 @@
 tutorial_url: 'https://github.com/MakeSchool-Tutorials/Intro-Clock-App-Swift/tree/master'
-title: 'Create a Clock App'
+title: 'Create a Clock App (Xcode 7 Archive)'
