--- a/M53-Robot-Wars/module.yaml
+++ b/M53-Robot-Wars/module.yaml
@@ -1,2 +1,2 @@
 tutorial_url: 'https://github.com/MakeSchool-Tutorials/Robot-Wars-Swift/tree/master'
-title: 'Robot Wars'
+title: 'Robot Wars (Xcode 7 Archive)'
