--- a/M54-Grid-Based-Simulations/module.yaml
+++ b/M54-Grid-Based-Simulations/module.yaml
@@ -1,2 +1,2 @@
 tutorial_url: 'https://github.com/MakeSchool-Tutorials/Intro-Grid-Simulations-Swift/tree/master'
-title: 'Grid based simulations'
+title: 'Grid based simulations (Xcode 7 Archive)'
