--- a/M60-Flappy-Bird/module.yaml
+++ b/M60-Flappy-Bird/module.yaml
@@ -1,2 +1,2 @@
 tutorial_url: 'https://github.com/MakeSchool-Tutorials/Hoppy-Bunny-SpriteKit-Swift/tree/master'
-title: 'Learn How to Build Flappy Bird'
+title: 'Learn How to Build Flappy Bird (Xcode 7 Archive)'
