--- a/M65-Timberman/module.yaml
+++ b/M65-Timberman/module.yaml
@@ -1,2 +1,2 @@
 tutorial_url: 'https://github.com/MakeSchool-Tutorials/Sushi-Neko-SpriteKit-Swift/tree/master'
-title: 'Learn How to Build Timberman'
+title: 'Learn How to Build Timberman (Xcode 7 Archive)'
