--- a/M70-Tip-Calculator/module.yaml
+++ b/M70-Tip-Calculator/module.yaml
@@ -1,2 +1,2 @@
 tutorial_url: 'https://github.com/MakeSchool-Tutorials/Tip-Calculator-Swift/tree/master'
-title: 'Tip Calculator -- your first app!'
+title: 'Tip Calculator -- your first app! (Xcode 7 Archive)'
